miniextendr-macros/tests/ui/derive_altrep_logical_rejects_subset.rs
//! Test: ALTREP logical rejects subset option.

use miniextendr_macros::AltrepLogical;

#[derive(AltrepLogical)]
#[altrep(subset)]
struct MyData {
    len: usize,
}

fn main() {}
